Fixing styling of header when collapsing

--- a/styles/jss.less
+++ b/styles/jss.less
@@ -238,6 +238,7 @@ a {
 
 
 .navbar-default {
+
 	margin-bottom: 0;
 
 	#jss-logo {
@@ -260,11 +261,27 @@ a {
 	
 	}
 
+	.navbar-nav {
+		.open {
+			a.dropdown-toggle {
+				color: white;
+				background-color: @brand-secondary;
+			}
+		}
+	}
+
 	.navbar-collapse {
 		padding: 0;
 	}
 
-	.search-link {
+	.navbar-extra-buttons {
+		list-style: none;
+		padding: 0;
+		margin: 0;
+
+		li {
+			float: left;
+		}
 		a {
 			display: inline-block;
 			padding: 15px;
@@ -279,6 +296,33 @@ a {
 				color: black;
 				text-decoration: none;
 			}
+		}
+	}
+
+	.navigationUserXs {
+		display: none;
+	}
+
+        @media (max-width: @screen-xs-max) {
+		#jss-logo {
+			padding: 0;
+			margin: 0;
+			width: 100%;
+
+			.navbar-brand {
+				width: 100% !important;
+				padding: 0 !important;
+				margin: 0 !important;
+				img {
+					width: 100%;
+					height: 100%;
+				}
+			}
+		}
+
+		// Remove margin when navbar-nav is shown in collapsed mode
+		.navbar-nav {
+			margin: 0;
 		}
 	}
 
